Fix navbar shadow on mobile

--- a/src/style/layout/_navigation.sass
+++ b/src/style/layout/_navigation.sass
@@ -88,7 +88,6 @@ footer
             &#language-selection
                 cursor: default
                 transition: all 0.2s ease-in
-                outline: 1px solid $nav-bg-color
                 border-radius: 0 $border-radius-lg 0 $border-radius-lg
                 &:focus
                     outline: 1px solid $nav-hover-bg-color
